--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"url": "https://github.com/mattcg/socks5-http-client.git"
 	},
 	"dependencies": {
-		"socks5-client": "~1.2.2"
+		"socks5-client": "AppGyver/socks5-client"
 	},
 	"devDependencies": {
 		"mocha": "~3.1.2",
